# fit-fix

./: .gitignore  Cargo.toml  Convert MyWhoosh to Edge 1050.bat  Fix MyWhoosh FIT.bat  LICENSE  README.md  Upload selected FIT to Garmin.bat  fix_fit.py  garmin_auth_bridge.py  garmin_converter.py  garmin_donor_spoof.py  garmin_pipeline.py  paired_compare.py  profile_config.py  pyproject.toml  variant_rank.py  zwift_compare.py
.github/workflows/: test.yml  windows-portable.yml
packaging/: Install Garmin FIT Upload.bat  README.txt  Setup.bat  install.ps1
scripts/: build-portable.ps1
src/: convert.rs  fit.rs  garmin.rs  main.rs  python.rs
tests/: test_fix_fit.py  test_garmin_auth_bridge.py  test_garmin_converter.py  test_garmin_donor_spoof.py  test_paired_compare.py  test_paired_guardrail.py  test_profile_config.py  test_variant_overrides.py  test_variant_rank.py  test_zwift_compare.py
