[package]
name = "garmin-fit-upload"
version = "3.3.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow"] }
fitparser = "0.11.0"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "cookies", "form", "json", "multipart", "query", "rustls"] }
rfd = { version = "0.17.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
