[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-fix"
version = "3.2.0"
description = "Normalize MyWhoosh FIT activities for Garmin watches"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "not_kler" }]
keywords = ["fit", "garmin", "mywhoosh", "cycling"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/klemen-r/fit-fix"
Issues = "https://github.com/klemen-r/fit-fix/issues"

[project.scripts]
fit-fix = "fix_fit:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
py-modules = ["fix_fit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
